Add images to tracking reminder notifications

--- a/apps/ionic/src/css/app.css
+++ b/apps/ionic/src/css/app.css
@@ -9775,7 +9775,8 @@ a.button {
   transition-property: opacity, transform, box-shadow; }
 
 [nav-view-transition="ios"][nav-view-direction="forward"], [nav-view-transition="ios"][nav-view-direction="back"] {
-  background-color: #000; }
+  /* background-color: #000; */
+  }
 
 [nav-view-transition="ios"] [nav-view="active"],
 [nav-view-transition="ios"][nav-view-direction="forward"] [nav-view="entering"],
