--- a/apps/ionic/src/css/app.css
+++ b/apps/ionic/src/css/app.css
@@ -3548,7 +3548,7 @@ ion-infinite-scroll {
   width: 100%;
   height: 100%;
   /* background-color: #d71212; */
-  background: radial-gradient(ellipse at center, rgba(127, 0, 173, 0.6) 0%, rgba(0, 0, 0, 0.8) 60%, #000000 90%), url(../img/backgrounds/stars.jpg);
+  /*background: radial-gradient(ellipse at center, rgba(127, 0, 173, 0.6) 0%, rgba(0, 0, 0, 0.8) 60%, #000000 90%), url(../img/backgrounds/stars.jpg);*/
   overflow: hidden;
   }
 
@@ -10117,7 +10117,8 @@ html, body {
   letter-spacing: 0.020em; }
 
 .md-button {
-  letter-spacing: 0.010em; }
+  letter-spacing: 0.010em;
+}
 
 /************
  * Defaults
@@ -10534,7 +10535,7 @@ button.md-button::-moz-focus-inner {
   padding-left: 12px;
   padding-bottom: 8px;
   margin: 6px 8px;
-  background: transparent;
+  /*background: transparent;*/
   color: currentColor;
   white-space: nowrap;
   /* Uppercase text content */
@@ -26198,7 +26199,7 @@ body::after {
   box-sizing: border-box;
   animation: 5s ease 0s infinite normal none running gradient;
   /*background: linear-gradient(-45deg, rgb(0 46 255), rgb(60 0 255), rgb(35 213 64), rgb(255 0 0)) 0% 0% / 400% 400%;*/
-  background: radial-gradient(ellipse at center, rgba(127, 0, 173, 0.3) 0%, rgba(0, 0, 0, 0.3) 60%, #000000 50%), url(../img/backgrounds/stars.jpg);
+  /*background: radial-gradient(ellipse at center, rgba(127, 0, 173, 0.3) 0%, rgba(0, 0, 0, 0.3) 60%, #000000 50%), url(../img/backgrounds/stars.jpg);*/
 }
 
 .rainbow-gradient-animation {
