--- a/apps/ionic/src/templates/fragments/studies-list-fragment.html
+++ b/apps/ionic/src/templates/fragments/studies-list-fragment.html
@@ -49,7 +49,9 @@
 </div>
 <div ng-show="searching" ng-include="'templates/spinner.html'"></div>
 <ion-list>
-    <div id="correlationList" class="list card correlationResultList" style="text-align: center"
+    <div id="correlationList"
+         class="list card correlationResultList"
+         style="text-align: center"
          ng-repeat="study in state.studiesResponse.studies">
         <div id="correlationBody" class="item-body">
             <div ng-bind-html="trustAsHtml(study.studyHtml.studyHeaderHtml)"
