--- a/apps/ionic/src/templates/login-page.html
+++ b/apps/ionic/src/templates/login-page.html
@@ -42,11 +42,13 @@
                                 </md-button>-->
                                 <div class="login-buttons-container">
                                     <i class="ion-social-google" id="google-button"
-                                       ng-click="state.socialLogin('googleplus', $event)"></i>
-                                    <i class="ion-social-twitter" id="twitter-button" ng-click="state.socialLogin('twitter', $event)"></i>
-                                    <i class="ion-social-github" id="github-button" ng-click="state.socialLogin('github', $event)"></i>
-                                    <i class="ion-social-facebook" id="facebook-button"
-                                       ng-click="state.socialLogin('facebook', $event)"></i>
+                                       ng-click="state.socialLogin('googleplus', $event)">
+                                        <span style="font-size: 3rem;">oogle Sign In</span>
+                                    </i>
+<!--                                    <i class="ion-social-twitter" id="twitter-button" ng-click="state.socialLogin('twitter', $event)"></i>-->
+<!--                                    <i class="ion-social-github" id="github-button" ng-click="state.socialLogin('github', $event)"></i>-->
+<!--                                    <i class="ion-social-facebook" id="facebook-button"-->
+<!--                                       ng-click="state.socialLogin('facebook', $event)"></i>-->
                                 </div>
 <!--                                <md-button id="signInWithFacebook"
                                            class="md-raised md-primary icon icon-left ion-social-facebook rainbow-gradient-animation"
