--- a/apps/ionic/src/templates/settings.html
+++ b/apps/ionic/src/templates/settings.html
@@ -9,7 +9,7 @@
         <div id="logout" class="list card">
             <a href="" ng-show="!user"
                ng-click="completelyResetAppStateAndSendToLogin('clicked sign in in settings page')"
-               class="item card">
+               class="item">
                 Account <p>Tap to sign in</p>
             </a>
             <a id="userName" href="" ng-show="user" ng-click="logout($event)" class="item ">
