--- a/apps/ionic/src/templates/study-creation-page.html
+++ b/apps/ionic/src/templates/study-creation-page.html
@@ -1,6 +1,6 @@
 <ion-view ng-controller="StudyCreationCtrl as ctrl" hide-nav-bar="hideNavigationMenu">
     <ion-nav-title>Create Study</ion-nav-title>
-    <div style=" background-color: {{state.color.backgroundColor}}; text-align: center; color: white; padding: 20px; height: 100%">
+    <div style="text-align: center; color: white; padding: 20px; height: 100%">
         <div style=" position: relative; top: 50%; transform: translateY(-50%);">
             <div ng-if="!state.study && (!state.effectVariable || !state.causeVariable)">
                 <p style="font-size: 30px; line-height: 1;"> Create a Study </p>
@@ -11,12 +11,14 @@
             </div>
             <div class="row">
                 <div class="col col-50">
-                    <div id="select-predictor-button" ng-click="selectPredictorVariable($event)"
+                    <div id="select-predictor-button"
+                         ng-click="selectPredictorVariable($event)"
                          style="box-shadow: 2px 2px 5px #434343; margin: 0 auto; border-radius: 50%; width: 130px; height: 130px; background-color: {{state.color.circleColor}};">
                         <div style="cursor: pointer; position: relative; top: 50%; transform: translateY(-50%);"
                              ng-if="!state.causeVariable">Select<br>Predictor<br>Variable
                         </div>
-                        <img ng-if="state.causeVariable" style="width: 100%; padding: 20px;"
+                        <img ng-if="state.causeVariable"
+                             style="width: 100%; padding: 20px;"
                              ng-src="{{state.causeVariable.pngUrl}}">
                     </div>
                 </div>
@@ -62,8 +64,8 @@
                     <span><i class="ion-android-globe"></i> &nbsp; GLOBAL STUDY &nbsp;</span>
                 </button>
             </div>
-            <div ng-if="state.study" ng-init="card = state.study.studyCard"
-                 ng-include="'templates/cards/blue-card.html'"></div>
+<!--            <div ng-if="state.study" ng-init="card = state.study.studyCard"
+                 ng-include="'templates/cards/blue-card.html'"></div>-->
             <div ng-if="state.study" class="list">
                 <p style="font-size: 30px; line-height: 1;"><i class="ion-person-add"></i> &nbsp; Recruit Participants
                 </p>
