--- a/apps/ionic/src/templates/study-page.html
+++ b/apps/ionic/src/templates/study-page.html
@@ -1,12 +1,14 @@
 <ion-view hide-nav-bar="hideNavigationMenu">
     <ion-nav-title>Study</ion-nav-title>
-    <ion-content scroll="{ isBrowserView : platform.isWeb == false }" overflow-scroll="true"
+    <ion-content scroll="{ isBrowserView : platform.isWeb == false }"
+                 overflow-scroll="true"
+                 style="padding: 10px;"
                  ng-class="{ isBrowserView : platform.isWeb == true }">
         <ion-refresher on-refresh="refreshStudy()"></ion-refresher>
         <div ng-show="loadingCharts || !state.study">
             <md-progress-linear md-mode="indeterminate"></md-progress-linear>
         </div>
-        <div ng-if="state.study">
+        <div ng-if="state.study" class="card">
             <div id="studyHeaderHtml" class="item-text-wrap card-item"
                  ng-if="state.study.studyHtml.studyHeaderHtml"
                  ng-bind-html="trustAsHtml(state.study.studyHtml.studyHeaderHtml)"
@@ -33,19 +35,20 @@
             <div ng-show="loadingCharts" ng-include="'templates/spinner.html'"></div>
         </div>
         <div ng-cloak ng-show="state.study"
-             style="border-style:hidden; padding: 20px;"><br>
+             class="card">
+            <br>
             <div id="individual-owner-buttons" ng-if="state.study.isOwner && state.study.type === 'individual'">
                 <div>
-                    <button class="button button-block icon-left {{state.study.studyImages.causeVariableIonIcon}}"
+                    <md-button class="button button-block icon-left {{state.study.studyImages.causeVariableIonIcon}}"
                             id="causeVariableSettingsButton"
                             ng-click="goToVariableSettingsForCauseVariable(state.study.statistics)">
                         {{state.study.causeVariableName}} Settings
-                    </button>
-                    <button class="button button-block icon-left {{state.study.studyImages.effectVariableIonIcon}}"
+                    </md-button>
+                    <md-button class="button button-block icon-left {{state.study.studyImages.effectVariableIonIcon}}"
                             id="effectVariableSettingsButton"
                             ng-click="goToVariableSettingsForEffectVariable(state.study.statistics)">
                         {{state.study.effectVariableName}} Settings
-                    </button>
+                    </md-button>
                 </div>
                 <div id="publicStudyToggle">
                     <ion-toggle ng-model="state.study.studySharing.shareUserMeasurements"
@@ -58,10 +61,10 @@
                         </i>
                     </ion-toggle>
                     <!--TODO: Add clipboard plugin for mobile-->
-                    <label ng-click="copyStudyUrlToClipboard()" class="item item-content"
+                    <md-button ng-click="copyStudyUrlToClipboard()" class="item item-content"
                            ng-if="!platform.isMobile && state.study.studySharing.shareUserMeasurements === true && state.study.studyLinks.studyLinkStatic">
                         <i class="icon ion-clipboard"> &nbsp {{state.copyLinkText}}</i>
-                    </label>
+                    </md-button>
                 </div>
             </div>
             <div id="non-owner-buttons" ng-if="!state.study.isOwner || state.study.type !== 'individual'">
@@ -78,8 +81,10 @@
             </div>
         </div>
         <div ng-cloak ng-show="state.study"><br>
-            <div id="studyCharts" style="text-align: center;">
-                <div ng-repeat="(key, chart) in state.study.studyCharts" ng-if="chart.highchartConfig"  class="item-text-wrap card-item">
+            <div id="studyCharts"
+                 style="text-align: center;">
+                <div ng-repeat="(key, chart) in state.study.studyCharts" ng-if="chart.highchartConfig"
+                     class="item-text-wrap card">
 <!--                    <h2>{{chart.chartTitle}}</h2>-->
                     <highchart id="{{chart.chartId}}" config="chart.highchartConfig"></highchart>
 <!--                    <p ng-if="chart.explanation">{{chart.explanation}}</p>-->
@@ -88,6 +93,7 @@
             </div>
             <div id="causeVariableCharts" style="text-align: center;">
                 <div ng-repeat="(key, causeChart) in state.study.causeVariable.charts"
+                     class="card"
                      ng-if="causeChart.highchartConfig">
 <!--                    <h2>{{causeChart.chartTitle}}</h2>-->
                     <highchart id="{{causeChart.chartId}}" config="causeChart.highchartConfig"></highchart>
@@ -95,8 +101,10 @@
 <!--                    <br>-->
                 </div>
             </div>
-            <div id="effectVariableCharts" style="text-align: center;">
+            <div id="effectVariableCharts"
+                 style="text-align: center;">
                 <div ng-repeat="(key, effectChart) in state.study.effectVariable.charts"
+                     class="card"
                      ng-if="effectChart.highchartConfig">
 <!--                    <h2>{{effectChart.chartTitle}}</h2>-->
                     <highchart id="{{effectChart.chartId}}" config="effectChart.highchartConfig"></highchart>
