Join study button

--- a/apps/ionic/src/templates/buttons/join-study-button.html
+++ b/apps/ionic/src/templates/buttons/join-study-button.html
@@ -1,12 +1,10 @@
 <div ng-if="!study.userId || (user && study.userId !== user.id)"
-     class="row"
+     class="center"
      ng-init="study = study || state.study">
-    <div class="button-bar">
-        <button id="join-{{study.id}}"
-            class="button button-clear button-assertive"
-                style="font-size: 22px;"
-                ng-click="goToState('app.studyJoin', {study: study})">
-            <i class="ion-ios-flask"> &nbsp; Join this Study &nbsp;</i>
-        </button>
-    </div>
+    <md-button id="join-{{study.id}}"
+            class="md-raised"
+            style="font-size: 22px;"
+            ng-click="goToState('app.studyJoin', {study: study})">
+        <i class="ion-ios-flask"> &nbsp; Join this Study &nbsp;</i>
+    </md-button>
 </div>
