--- a/apps/ionic/src/templates/buttons/vote-buttons.html
+++ b/apps/ionic/src/templates/buttons/vote-buttons.html
@@ -1,14 +1,33 @@
-<div ng-click="upVote(study, $index, $event)" class="show-inline">
-    <div class="tooltip" title="Relationship Seems Plausible">
-        <img ng-if="study.studyVotes.userVote === null || study.studyVotes.userVote === 0"
-             src="img/thumbs/thumb_up_white.png" height="32px" width="32px"/>
-        <img ng-if="study.studyVotes.userVote === 1" src="img/thumbs/thumb_up_black.png" height="32px" width="32px"/>
-    </div>
-</div> &nbsp;&nbsp;
-<div ng-click="downVote(study, $index, $event)" class="show-inline">
-    <div class="tooltip" title="Relationship Seems Impossible">
-        <img ng-if="study.studyVotes.userVote === null || study.studyVotes.userVote === 1"
-             src="img/thumbs/thumb_down_white.png" height="32px" width="32px"/>
-        <img ng-if="study.studyVotes.userVote === 0" src="img/thumbs/thumb_down_black.png" height="32px" width="32px"/>
-    </div>
+<div ng-init="study = study || state.study"
+     style="text-align: center;">
+<md-button aria-label="Favorite"
+           class="md-raised"
+           ng-click="downVote(study, $index, $event)">
+    <md-tooltip md-direction="bottom">Seems wrong or boring?</md-tooltip>
+    <img  class="md-fab inline"
+          ng-if="study.studyVotes.userVote === null || study.studyVotes.userVote === 1"
+          src="img/thumbs/thumb_down_white.png"
+          height="24px" width="24px"/>
+    <img  class="md-fab inline" ng-if="study.studyVotes.userVote === 0"
+          src="img/thumbs/thumb_down_black.png"
+          height="24px" width="24px"/>
+    <span class="inline">Seems Wrong?</span>
+</md-button>
+<md-button aria-label="Upvote"
+           class="md-raised"
+           ng-click="upVote(study, $index, $event)">
+    <!--                <md-icon md-svg-icon="img/icons/baseline-share-24px.svg"></md-icon>-->
+    <img class="md-fab inline"
+         ng-if="study.studyVotes.userVote === null || study.studyVotes.userVote === 0"
+         src="img/thumbs/thumb_up_white.png"
+         height="24px" width="24px"/>
+    <img class="md-fab inline"
+         ng-if="study.studyVotes.userVote === 1"
+         src="img/thumbs/thumb_up_black.png"
+         height="24px" width="24px"/>
+    <md-tooltip md-direction="bottom">
+        Relationship Seems Plausible and Interesting
+    </md-tooltip>
+    <span class="inline">Seems Right?</span>
+</md-button>
 </div>
