Variable settings and study buttons

--- a/apps/ionic/src/templates/fragments/correlation-buttons-fragment.html
+++ b/apps/ionic/src/templates/fragments/correlation-buttons-fragment.html
@@ -1,30 +1,13 @@
-<div class="voteButtons" style="cursor: pointer; text-align: center;" ng-init="study = study || state.study">
+<div ng-init="study = study || state.study">
     <div ng-include="'templates/buttons/vote-buttons.html'"></div>
-    <div ng-hide="state.hideStudyButton" ng-click="goToStudyPageViaStudy(study)" class="show-inline">
-        <div class="tooltip" title="Go to Full Study"> &nbsp &nbsp <i style="font-size: 32px;"
-                                                                      class="ion-ios-book-outline"></i></div>
-    </div> &nbsp; &nbsp;
-    <div ng-click="goToVariableSettingsForCauseVariable(study)" class="show-inline">
-        &nbsp;<div class="tooltip" title="Change Analysis Parameters"><i style="font-size: 32px;"
-                                                                         class="ion-android-options"></i></div>
-    </div> &nbsp; &nbsp;
-    <div ng-click="shareStudy(study, 'studyLinkFacebook', $event)" class="show-inline">
-        <div class="tooltip" title="Share Study to Facebook"><i style="font-size: 32px;"
-                                                                class="ion-social-facebook"></i></div>
-    </div>
-    &nbsp&nbsp;
-    <div ng-click="shareStudy(study, 'studyLinkTwitter', $event);" class="show-inline">
-        <div class="tooltip" title="Share Study to Twitter"><i style="font-size: 32px;" class="ion-social-twitter"></i>
+    <div ng-include="'templates/buttons/study-sharing-buttons.html'"></div>
+<!--
+    <div ng-hide="state.hideStudyButton"
+         ng-click="goToStudyPageViaStudy(study)"
+         class="show-inline">
+        <div class="tooltip" title="Go to Full Study"> &nbsp &nbsp
+            <i style="font-size: 24px;" class="ion-ios-book-outline"></i>
         </div>
-    </div> &nbsp; &nbsp;
-    <div ng-click="shareStudy(study, 'studyLinkGoogle', $event);" class="show-inline">
-        <div class="tooltip" title="Share Study to Google+"><i style="font-size: 32px;" class="ion-social-google"></i>
-        </div>
-    </div> &nbsp; &nbsp;
-    <div ng-click="shareStudy(study, 'studyLinkEmail', $event);" class="show-inline">
-        <div class="tooltip" title="Share Study by Email"><i style="font-size: 32px;" class="ion-email"></i></div>
-    </div> &nbsp; &nbsp;
-    <div ng-click="copyToClipboard(study.studyLinks.studyLinkStatic)" class="show-inline">
-        <div class="tooltip" title="Copy Shareable Link to Clipboard"><i style="font-size: 32px;" class="ion-link"></i></div>
     </div>
+-->
 </div>
