--- a/apps/ionic/src/templates/fragments/studies-list-fragment.html
+++ b/apps/ionic/src/templates/fragments/studies-list-fragment.html
@@ -56,7 +56,8 @@
         <div id="correlationBody" class="item-body">
             <div ng-bind-html="trustAsHtml(study.studyHtml.studyHeaderHtml)"
                  ng-click="goToStudyPageViaStudy(study)"></div>
-            <div ng-include="'templates/fragments/correlation-buttons-fragment.html'"></div>
+<!--            <div ng-include="'templates/buttons/vote-buttons.html'"></div>-->
+<!--            <div ng-include="'templates/buttons/study-sharing-buttons.html'"></div>-->
             <div ng-include="'templates/buttons/join-study-button.html'"></div>
         </div>
     </div>
